[Fix/#20] 복용약, 일정 test 완료